[package]
name = "c4-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c4-api"
path = "src/bin/api.rs"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
