[package]
name = "c4-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c4-api"
path = "src/bin/api.rs"
required-features = ["api"]

[dependencies]
env_logger = "0.11"
log = "0.4"
axum = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[features]
api = ["dep:axum", "dep:tokio", "dep:serde", "dep:serde_json", "dep:tower-http"]
